biometric-system/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biometric
  labels:
    name: biometric
    purpose: biometric-recognition
